# TerraFlow-Dotfiles

./: .gitignore  .gitmodules  DEVELOPER.md  INSTALL.md  README.md  WALKTHROUGH.md  fix_paru.sh  in_pack.sh  install.sh  packages.txt
configs/: starship.toml
configs/ags/: config.js  style.css
configs/ags/widget/: Bar.js  Dashboard.js
configs/fish/: config.fish
configs/hypr/: colors.conf  hypridle.conf  hyprland.conf  hyprlock.conf  keybinds.conf
configs/hypr/modules/: decoration.conf  env.conf  general.conf  input.conf  keybinds.conf  monitors.conf  startup.conf  windows.conf
configs/hypr/scripts/: launch_waybar.sh  paste.sh  quick-settings.sh  refresh.sh  theme-switcher.sh  (+2 more)
configs/kitty/: kitty.conf
configs/lazygit/: config.yml
configs/mpv/: mpv.conf
configs/nwg-drawer/: drawer.css  drawer.json
configs/waybar/: colors.css  config.jsonc  style.css
configs/yazi/: yazi.toml
dunst/: dunstrc
ghostty/: config
hypridle/: hypridle.conf
hyprland/: hyprland.conf
hyprland/conf.d/: animations.conf  autostart.conf  keybinds.conf  monitors.conf  windowrules.conf
hyprlock/: hyprlock.conf
quickshell/: config.qml  shell.qml
quickshell/services/: TerraShellService.qml
scripts/: apps.sh  configs.sh  packages.sh  paru.sh  reset_to_minimal.sh  setup_lazyvim.sh  snapshot.sh  terra-store  theme-switcher.sh  update.sh  utils.sh  verify_setup.sh
starship/: starship.toml
terra-shell/: Cargo.toml
terra-shell/src/: audio.rs  battery.rs  brightness.rs  hyprland.rs  ipc.rs  main.rs  media.rs  network.rs
theme/: colors.json
zsh/: .zshrc
(+11 files in other folders)
