[package]
name = "terra_shell"
version = "1.0.0"
edition = "2021"
authors = ["TerraFlow"]
description = "System service daemon powering Quickshell widgets"
license = "MIT"
repository = "https://github.com/manu2407/TerraFlow-Dotfiles"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Directory paths
dirs = "6.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
